# margin

./: .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
cli-go/: go.mod  go.sum
cli-go/cmd/margin/: main.go
cli-go/internal/config/: config.go  config_test.go
cli-go/internal/mcpserver/: server.go  server_test.go
cli-go/internal/remind/: remind.go  remind_test.go
cli-go/internal/rootio/: rootio.go
cli-go/internal/runblock/: runblock.go  runblock_test.go
cli-go/internal/search/: search.go  search_test.go
cli-go/internal/slackcap/: slack.go  slack_test.go
scripts/: install.ps1  install.sh
scripts/tests/: install_contract_cases.json  install_contract_test.py  install_smoke_test.sh
sublime-plugin/Margin/: Main.sublime-commands  Margin.sublime-settings  margin.py  margin_commands.py  margin_security.py  margin_services.py  margin_settings.py  margin_storage.py
sublime-plugin/Margin/tests/: conftest.py  test_commands.py  test_security.py  test_services.py  test_settings.py
